Start players page implementation

--- a/resources/players.html
+++ b/resources/players.html
@@ -5,11 +5,11 @@
     <!-- build:include include/head.html --><!-- /build -->
 
     <script id="playerTemplate" type="x-tmpl-mustache">
-        <div class="col" id="{{ situtationKey }}">
-            <div class="card card-clickable border-info mb-3" style="max-width: 20rem;" onclick="CivBuddy.buttonClick(this, 'Players', 'select', '{{ situtationKey }}')">
+        <div class="col" id="{{ situationKey }}">
+            <div class="card card-clickable border-info mb-3" style="max-width: 20rem;" onclick="CivBuddy.buttonClick(this, 'Players', 'select', '{{ situationKey }}')">
                 <div class="card-header"><span class="text-muted" data-l10n-id="players-cardstats"></span>
                     <button type="button" class="close" aria-label="Delete Player"
-                        onclick="CivBuddy.buttonClick(this, 'Players', 'delete', '{{ situtationKey }}', '{{ playerName }}', event)">
+                        onclick="CivBuddy.buttonClick(this, 'Players', 'delete', '{{ situationKey }}', '{{ playerName }}', event)">
                         <span class="oi oi-trash" aria-hidden="true"></span>
                     </button>
                 </div>
