Read and display list of players

--- a/resources/players.html
+++ b/resources/players.html
@@ -7,7 +7,7 @@
     <script id="playerTemplate" type="x-tmpl-mustache">
         <div class="col" id="{{ situationKey }}">
             <div class="card card-clickable border-info mb-3" style="max-width: 20rem;" onclick="CivBuddy.buttonClick(this, 'Players', 'select', '{{ situationKey }}')">
-                <div class="card-header"><span class="text-muted" data-l10n-id="players-cardstats"></span>
+                <div class="card-header"><span class="text-muted" data-l10n-id="players-cards-0"></span>
                     <button type="button" class="close" aria-label="Delete Player"
                         onclick="CivBuddy.buttonClick(this, 'Players', 'delete', '{{ situationKey }}', '{{ playerName }}', event)">
                         <span class="oi oi-trash" aria-hidden="true"></span>
