--- a/resources/cards.html
+++ b/resources/cards.html
@@ -7,38 +7,52 @@
     <!-- TODO Mustache templates -->
 </head>
 <body>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <p class="navbar-brand mb-0">CivBuddy</p>
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarLangDropdownLabel" role="button" data-toggle="dropdown" aria-haspopup="true"
+                    aria-expanded="false">
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarLangDropdownLabel" id="otherLanguageFlags"></div>
+            </li>
+        </ul>
+    </nav>
 
-<!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <p class="navbar-brand mb-0">CivBuddy</p>
-    <ul class="navbar-nav ml-auto">
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarLangDropdownLabel" role="button"
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarLangDropdownLabel" id="otherLanguageFlags"></div>
-        </li>
-    </ul>
-</nav>
-    
-<!-- List of cards -->
-<div class="container mt-4">
-    <div class="row" id="cardList">
-        <div class="card border-info mb-3" style="max-width: 20rem;">
-            <div class="card-header"><img src="img/crafts.svg" alt="">Crafts <img src="img/sciences.svg" alt="">Sciences</div>
-            <div class="card-body">
-              <h4 class="card-title">Engineering</h4>
-              <p class="card-text">group icons, cost nominal, cost current, bonus info, card info icon</p>
+    <!-- List of cards -->
+    <div class="container mt-4">
+        <div class="row" id="cardList">
+            <div class="card card-civbuddy border-info mb-3" style="max-width: 20rem;">
+                <div class="card-combined-header">
+                    <div class="card-header">
+                        <img src="img/crafts.svg" alt=""><img src="img/sciences.svg" alt=""><span class="oi oi-info" aria-hidden="true"></span>
+                    </div>
+                    <div class="card-nominal-cost">200</div>
+                </div>
+                <div class="card-body">
+                    <h4 class="card-title">Schauspiel &amp; Poesie</h4>
+                    <div class="card-current-cost">170</div>
+                    <p class="card-text text-muted card-bonus-info mb-1" data-l10n-id="cards-card-bonus"
+                        data-l10n-args='{"currentCards":3,"maxCards":6,"currentBonus":30,"maxBonus":60}'></p>
+                    <div style="width: 80%;">
+                        <div class="progress">
+                            <div class="progress-bar bg-success" role="progressbar" style="width: 50%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="60"></div>
+                            <div class="progress-bar bg-primary" role="progressbar" style="width: 20%" aria-valuenow="12" aria-valuemin="0" aria-valuemax="60"></div>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
+        </div>
+
+        <!-- possible Karte -->
+        <!-- geplante Karte -->
+        <!-- gesperrte Karte (prereq failed) -->
+        <!-- zu teure Karte -->
+        <!-- discouraged Karte -->
+        <!-- owned Karte -->
     </div>
 
-    <!-- geplante Karte -->
-    <!-- gesperrte Karte (prereq failed) -->
-    <!-- zu teure Karte -->
-    <!-- discouraged Karte -->
-</div>
-
-<!-- build:include include/footer.html --><!-- /build -->
+    <!-- build:include include/footer.html --><!-- /build -->
 </body>
 </html>
