--- a/resources/cards.html
+++ b/resources/cards.html
@@ -4,7 +4,37 @@
     <title>CivBuddy</title>
     <!-- build:include include/head.html --><!-- /build -->
 
-    <!-- TODO Mustache templates -->
+    <script id="cardTemplate" type="x-tmpl-mustache">
+        <div class="col" id="card-{{ cardId }}">
+            <div class="card card-civbuddy card-status-absent border-info mb-3" style="max-width: 20rem;">
+                <div class="card-combined-header">
+                    <div class="card-header">
+                        <div class="info-button"><span class="oi oi-info" aria-hidden="true"></span></div>
+                    </div>
+                    <div class="card-nominal-cost">{{ costNominal }}</div>
+                </div>
+                <div class="card-combined-title">
+                    <h4 class="card-title">{{ cardTitle }}</h4>
+                    <div class="card-current-cost">{{ costCurrent }}</div>
+                </div>
+                <div class="card-body">
+                    <p class="card-text text-muted card-credits-info mb-1" data-l10n-id="cards-card-credits-plan"
+                        data-l10n-args='{"currentCards":3,"plannedCards":4,"maxCards":6,"currentCredits":30,"plannedCredits":45,"maxCredits":60}'></p>
+                    <div style="width: 80%;">
+                        <div class="progress">
+                            <div role="progressbar" class="progress-bar bg-info bar-owned" style="width: 50%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="60"></div>
+                            <div role="progressbar" class="progress-bar bg-primary bar-planned" style="width: 20%" aria-valuenow="12" aria-valuemin="0" aria-valuemax="60"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </script>
+
+    <script id="groupIconTemplate" type="x-tmpl-mustache">
+        <img src="img/{{ iconName }}.svg" alt="{{ groupName }}" title="{{ groupName }}">
+    </script>
+
 </head>
 <body>
 
@@ -27,7 +57,7 @@
     <div class="row" id="cardList">
 
         <!-- possible Karte -->
-        <div class="col" id="card-Metalworking">
+        <div class="col" id="card-sample-Metalworking">
             <div class="card card-civbuddy card-status-absent border-info mb-3" style="max-width: 20rem;">
                 <div class="card-combined-header">
                     <div class="card-header">
@@ -54,7 +84,7 @@
         </div>
 
         <!-- zu teure Karte -->
-        <div class="col" id="card-Law">
+        <div class="col" id="card-sample-Law">
             <div class="card card-civbuddy card-status-unaffordable border-danger mb-3" style="max-width: 20rem;">
                 <div class="card-combined-header">
                     <div class="card-header">
@@ -82,7 +112,7 @@
         </div>
 
         <!-- owned Karte -->
-        <div class="col" id="card-Pottery">
+        <div class="col" id="card-sample-Pottery">
             <div class="card card-civbuddy card-status-owned border-success mb-3" style="max-width: 20rem;">
                 <div class="card-combined-header">
                     <div class="card-header">
@@ -99,7 +129,7 @@
         </div>
         
         <!-- discouraged Karte -->
-        <div class="col" id="card-Democracy">
+        <div class="col" id="card-sample-Democracy">
             <div class="card card-civbuddy card-status-discouraged border-warning mb-3" style="max-width: 20rem;">
                 <div class="card-combined-header">
                     <div class="card-header">
@@ -127,7 +157,7 @@
         </div>
 
         <!-- gesperrte Karte (prereq failed) -->
-        <div class="col" id="card-Coinage">
+        <div class="col" id="card-sample-Coinage">
             <div class="card card-civbuddy card-status-prereq border-secondary mb-3" style="max-width: 20rem;">
                 <div class="card-combined-header">
                     <div class="card-header">
@@ -155,7 +185,7 @@
         </div>
     
         <!-- geplante Karte -->
-        <div class="col" id="card-Medicine">
+        <div class="col" id="card-sample-Medicine">
             <div class="card card-civbuddy card-status-planned bg-success mb-3" style="max-width: 20rem;">
                 <div class="card-combined-header">
                     <div class="card-header">
