--- a/resources/cards.html
+++ b/resources/cards.html
@@ -20,10 +20,10 @@
                 <div class="card-body">
                     <p class="card-text text-muted card-credits-info mb-1" data-l10n-id="cards-card-credits-plan"
                         data-l10n-args='{"currentCards":3,"plannedCards":4,"maxCards":6,"currentCredits":30,"plannedCredits":45,"maxCredits":60}'></p>
-                    <div style="width: 80%;">
+                    <div style="width: {{ creditBarWidth }}%;">
                         <div class="progress">
-                            <div role="progressbar" class="progress-bar bg-info bar-owned" style="width: 50%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="60"></div>
-                            <div role="progressbar" class="progress-bar bg-primary bar-planned" style="width: 20%" aria-valuenow="12" aria-valuemin="0" aria-valuemax="60"></div>
+                            <div role="progressbar" class="progress-bar bg-info bar-owned" style="width: 50%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="{{ totalCredit }}"></div>
+                            <div role="progressbar" class="progress-bar bg-primary bar-planned" style="width: 20%" aria-valuenow="12" aria-valuemin="0" aria-valuemax="{{ totalCredit }}"></div>
                         </div>
                     </div>
                 </div>
