--- a/resources/cards.html
+++ b/resources/cards.html
@@ -24,8 +24,10 @@
                         data-l10n-args='{"currentCards":3,"plannedCards":4,"maxCards":6,"currentCredits":30,"plannedCredits":45,"maxCredits":60}'></p>
                     <div style="width: {{ creditBarWidth }}%;">
                         <div class="progress">
-                            <div role="progressbar" class="progress-bar bg-info bar-owned" style="width: 50%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="{{ totalCredit }}"></div>
-                            <div role="progressbar" class="progress-bar bg-primary bar-planned" style="width: 20%" aria-valuenow="12" aria-valuemin="0" aria-valuemax="{{ totalCredit }}"></div>
+                            <div role="progressbar" class="progress-bar bg-info bar-owned" style="width: {{ creditBarOwnedPercent }}%"
+                                aria-valuenow="{{ creditBarOwnedValue }}" aria-valuemin="0" aria-valuemax="{{ totalCredit }}"></div>{{#creditBarPlannedValue}}
+                            <div role="progressbar" class="progress-bar bg-primary bar-planned" style="width: 20%"
+                                aria-valuenow="{{ creditBarPlannedValue }}" aria-valuemin="0" aria-valuemax="{{ totalCredit }}"></div>{{/creditBarPlannedValue}}
                         </div>
                     </div>{{/isOwned}}
                 </div>
