Fix navbar in place

--- a/resources/cards.html
+++ b/resources/cards.html
@@ -57,7 +57,7 @@
 </nav>
 
 <!-- List of cards -->
-<div class="container mt-4">
+<div class="container card-container">
     <div class="row" id="cardList">
 
         <!-- possible Karte -->
