Show card in status 'prereq failed' in the same style as 'unaffordable'

--- a/resources/cards.html
+++ b/resources/cards.html
@@ -162,7 +162,7 @@
 
         <!-- gesperrte Karte (prereq failed) -->
         <div class="col" keep="true" id="card-sample-Coinage">
-            <div class="card card-civbuddy card-status-prereq border-secondary mb-3">
+            <div class="card card-civbuddy card-status-prereqfailed border-danger mb-3">
                 <div class="card-combined-header">
                     <div class="card-header">
                         <img src="img/crafts.svg" alt=""><img src="img/sciences.svg" alt="">
@@ -175,7 +175,7 @@
                     <div class="card-current-cost">170</div>
                 </div>
                 <div class="card-body">
-                    <p class="card-text text-muted mb-1" data-l10n-id="cards-card-prereqfailed-expl" data-l10n-args='{"arg": "Gesetz"}'></p>
+                    <p class="card-text text-danger mb-1" data-l10n-id="cards-card-prereqfailed-expl" data-l10n-args='{"arg": "Gesetz"}'></p>
                     <p class="card-text text-muted card-credits-info mb-1" data-l10n-id="cards-card-credits-plan"
                         data-l10n-args='{"currentCards":3,"plannedCards":4,"maxCards":6,"currentCredits":30,"plannedCredits":45,"maxCredits":60}'></p>
                     <div style="width: 80%;">
