Fix top margin on 'Players' and 'Games' pages

--- a/resources/index.html
+++ b/resources/index.html
@@ -58,7 +58,7 @@
 </nav>
     
 <!-- List of games -->
-<div class="container mt-4">
+<div class="container card-container">
     <div class="row" id="gameList"></div>
     <div class="row">
         <div class="col">
