--- a/resources/players.html
+++ b/resources/players.html
@@ -47,7 +47,7 @@
 </nav>
     
 <!-- List of players -->
-<div class="container mt-4">
+<div class="container card-container">
     <div class="row" id="playerList"></div>
     <div class="row">
         <div class="col">
