--- a/resources/cards.html
+++ b/resources/cards.html
@@ -15,13 +15,13 @@
                     <div class="card-nominal-cost">{{ costNominal }}</div>
                 </div>{{^isOwned}}
                 <div class="card-combined-title">
-                    <h4 class="card-title{{^isPlannable}} text-muted{{/isPlannable}}">{{ cardTitle }}</h4>
-                    <div class="card-current-cost{{^isPlannable}} text-muted{{/isPlannable}}">{{ costCurrent }}</div>
+                    <h4 class="card-title">{{ cardTitle }}</h4>
+                    <div class="card-current-cost">{{ costCurrent }}</div>
                 </div>{{/isOwned}}
                 <div class="card-body">{{#isOwned}}
                     <h4 class="card-title">{{ cardTitle }}</h4>{{/isOwned}}
-                    <p class="card-text {{ textStyle }} mb-1{{^showExplanation}} d-none{{/showExplanation}}" data-l10n-id="cards-card-{{ status }}-expl"></p>{{^isOwned}}
-                    <p class="card-text text-muted card-credits-info mb-1"></p>
+                    <p class="card-text card-status-expl {{ textStyle }} mb-1" data-l10n-id="cards-card-{{ status }}-expl"></p>{{^isOwned}}
+                    <p class="card-text card-credits-info mb-1"></p>
                     <div style="width: {{ creditBarWidth }}%;">
                         <div class="progress">
                             <div role="progressbar" class="progress-bar bg-info bar-owned" style="width: {{ creditBarOwnedPercent }}%"
@@ -75,7 +75,8 @@
                     <div class="card-current-cost">170</div>
                 </div>
                 <div class="card-body">
-                    <p class="card-text text-muted card-credits-info mb-1" data-l10n-id="cards-card-credits-plan"
+                    <p class="card-text card-status-expl mb-1" data-l10n-id="cards-card-absent-expl"></p>
+                    <p class="card-text card-credits-info mb-1" data-l10n-id="cards-card-credits-plan"
                         data-l10n-args='{"currentCards":3,"plannedCards":4,"maxCards":6,"currentCredits":30,"plannedCredits":45,"maxCredits":60}'></p>
                     <div style="width: 80%;">
                         <div class="progress">
@@ -98,12 +99,12 @@
                     <div class="card-nominal-cost">200</div>
                 </div>
                 <div class="card-combined-title">
-                    <h4 class="card-title text-muted">Schauspiel &amp; Poesie</h4>
-                    <div class="card-current-cost text-muted">170</div>
+                    <h4 class="card-title">Schauspiel &amp; Poesie</h4>
+                    <div class="card-current-cost">170</div>
                 </div>
                 <div class="card-body">
-                    <p class="card-text text-danger mb-1" data-l10n-id="cards-card-unaffordable-expl"></p>
-                    <p class="card-text text-muted card-credits-info mb-1" data-l10n-id="cards-card-credits-plan"
+                    <p class="card-text card-status-expl text-danger mb-1" data-l10n-id="cards-card-unaffordable-expl"></p>
+                    <p class="card-text card-credits-info mb-1" data-l10n-id="cards-card-credits-plan"
                         data-l10n-args='{"currentCards":3,"plannedCards":4,"maxCards":6,"currentCredits":30,"plannedCredits":45,"maxCredits":60}'></p>
                     <div style="width: 80%;">
                         <div class="progress">
@@ -127,7 +128,7 @@
                 </div>
                 <div class="card-body">
                     <h4 class="card-title">Schauspiel &amp; Poesie</h4>
-                    <p class="card-text text-muted" data-l10n-id="cards-card-owned-expl"></p>
+                    <p class="card-text card-status-expl text-muted mb-1" data-l10n-id="cards-card-owned-expl"></p>
                 </div>
             </div>
         </div>
@@ -147,8 +148,8 @@
                     <div class="card-current-cost">170</div>
                 </div>
                 <div class="card-body">
-                    <p class="card-text text-warning mb-1" data-l10n-id="cards-card-discouraged-expl" data-l10n-args='{"arg": 50}'></p>
-                    <p class="card-text text-muted card-credits-info mb-1" data-l10n-id="cards-card-credits-plan"
+                    <p class="card-text card-status-expl text-warning mb-1" data-l10n-id="cards-card-discouraged-expl" data-l10n-args='{"arg": 50}'></p>
+                    <p class="card-text card-credits-info mb-1" data-l10n-id="cards-card-credits-plan"
                         data-l10n-args='{"currentCards":3,"plannedCards":4,"maxCards":6,"currentCredits":30,"plannedCredits":45,"maxCredits":60}'></p>
                     <div style="width: 80%;">
                         <div class="progress">
@@ -171,12 +172,12 @@
                     <div class="card-nominal-cost">200</div>
                 </div>
                 <div class="card-combined-title">
-                    <h4 class="card-title text-muted">Schauspiel &amp; Poesie</h4>
-                    <div class="card-current-cost text-muted">170</div>
+                    <h4 class="card-title">Schauspiel &amp; Poesie</h4>
+                    <div class="card-current-cost">170</div>
                 </div>
                 <div class="card-body">
-                    <p class="card-text text-danger mb-1" data-l10n-id="cards-card-prereqfailed-expl" data-l10n-args='{"arg": "Gesetz"}'></p>
-                    <p class="card-text text-muted card-credits-info mb-1" data-l10n-id="cards-card-credits-plan"
+                    <p class="card-text card-status-expl text-danger mb-1" data-l10n-id="cards-card-prereqfailed-expl" data-l10n-args='{"arg": "Gesetz"}'></p>
+                    <p class="card-text card-credits-info mb-1" data-l10n-id="cards-card-credits-plan"
                         data-l10n-args='{"currentCards":3,"plannedCards":4,"maxCards":6,"currentCredits":30,"plannedCredits":45,"maxCredits":60}'></p>
                     <div style="width: 80%;">
                         <div class="progress">
@@ -203,6 +204,7 @@
                     <div class="card-current-cost">170</div>
                 </div>
                 <div class="card-body">
+                    <p class="card-text card-status-expl mb-1" data-l10n-id="cards-card-planned-expl"></p>
                     <p class="card-text card-credits-info mb-1" data-l10n-id="cards-card-credits-plan"
                         data-l10n-args='{"currentCards":3,"plannedCards":4,"maxCards":6,"currentCredits":30,"plannedCredits":45,"maxCredits":60}'></p>
                     <div style="width: 80%;">
