--- a/resources/cards.html
+++ b/resources/cards.html
@@ -5,7 +5,7 @@
     <!-- build:include include/head.html --><!-- /build -->
 
     <script id="cardTemplate" type="x-tmpl-mustache">
-        <div class="col" id="card-{{ cardId }}">
+        <div class="col-xl-4 col-lg-5 col-md-6 col-sm-12" id="card-{{ cardId }}">
             <div class="card card-civbuddy card-status-{{ status }} {{ borderStyle }} mb-3"
                 onclick="CivBuddy.buttonClick(this, 'Cards', 'click', '{{ cardId }}')">
                 <div class="card-combined-header">
@@ -45,16 +45,18 @@
 
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <p class="navbar-brand mb-0">CivBuddy</p>
-    <ul class="navbar-nav ml-auto">
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarLangDropdownLabel" role="button" data-toggle="dropdown" aria-haspopup="true"
-                aria-expanded="false">
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarLangDropdownLabel" id="otherLanguageFlags"></div>
-        </li>
-    </ul>
-    <!-- TODO player name, link to 'Players' page, num cards, score, zielpunktzahl-verfehlung (if needed), commit button -->
+    <div class="container">
+        <p class="navbar-brand mb-0">CivBuddy</p>
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarLangDropdownLabel" role="button" data-toggle="dropdown" aria-haspopup="true"
+                    aria-expanded="false">
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarLangDropdownLabel" id="otherLanguageFlags"></div>
+            </li>
+        </ul>
+        <!-- TODO player name, link to 'Players' page, num cards, score, zielpunktzahl-verfehlung (if needed), commit button -->
+    </div>
 </nav>
 
 <!-- List of cards -->
@@ -62,7 +64,7 @@
     <div class="row" id="cardList">
 
         <!-- possible Karte -->
-        <div class="col" keep="true" id="card-sample-Metalworking">
+        <div class="col-xl-4 col-lg-5 col-md-6 col-sm-12" keep="true" id="card-sample-Metalworking">
             <div class="card card-civbuddy card-status-absent border-info mb-3">
                 <div class="card-combined-header">
                     <div class="card-header">
@@ -90,7 +92,7 @@
         </div>
 
         <!-- zu teure Karte -->
-        <div class="col" keep="true" id="card-sample-Law">
+        <div class="col-xl-4 col-lg-5 col-md-6 col-sm-12" keep="true" id="card-sample-Law">
             <div class="card card-civbuddy card-status-unaffordable border-danger mb-3">
                 <div class="card-combined-header">
                     <div class="card-header">
@@ -118,7 +120,7 @@
         </div>
 
         <!-- owned Karte -->
-        <div class="col" keep="true" id="card-sample-Pottery">
+        <div class="col-xl-4 col-lg-5 col-md-6 col-sm-12" keep="true" id="card-sample-Pottery">
             <div class="card card-civbuddy card-status-owned border-success mb-3">
                 <div class="card-combined-header">
                     <div class="card-header">
@@ -135,7 +137,7 @@
         </div>
         
         <!-- discouraged Karte -->
-        <div class="col" keep="true" id="card-sample-Democracy">
+        <div class="col-xl-4 col-lg-5 col-md-6 col-sm-12" keep="true" id="card-sample-Democracy">
             <div class="card card-civbuddy card-status-discouraged border-warning mb-3">
                 <div class="card-combined-header">
                     <div class="card-header">
@@ -163,7 +165,7 @@
         </div>
 
         <!-- gesperrte Karte (prereq failed) -->
-        <div class="col" keep="true" id="card-sample-Coinage">
+        <div class="col-xl-4 col-lg-5 col-md-6 col-sm-12" keep="true" id="card-sample-Coinage">
             <div class="card card-civbuddy card-status-prereqfailed border-danger mb-3">
                 <div class="card-combined-header">
                     <div class="card-header">
@@ -191,7 +193,7 @@
         </div>
     
         <!-- geplante Karte -->
-        <div class="col" keep="true" id="card-sample-Medicine">
+        <div class="col-xl-4 col-lg-5 col-md-6 col-sm-12" keep="true" id="card-sample-Medicine">
             <div class="card card-civbuddy card-status-planned bg-success mb-3">
                 <div class="card-combined-header">
                     <div class="card-header">
@@ -222,17 +224,17 @@
 
 <!-- Funds Bar Footer -->
 <footer class="footer bg-primary">
-    <div class="container">
+    <div class="container-fluid">
         <div class="row align-items-center">
-            <div class="col-10">
+            <div class="col-md-9 col-sm-8">
                 <div class="progress">
                     <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
             </div>
-            <div class="col-1">
+            <div class="col-md-2 col-sm-3">
                 <p class="funds-info-text text-muted" data-l10n-id="cards-funds-remain" data-l10n-args='{"fundsCurrent": 30, "fundsAvailable": 120}'></p>
             </div>
-            <div class="col-1">
+            <div class="col-1 funds-icon">
                 <!-- TODO icon does not change color - maybe don't set color in icon? -->
                 <a class="nav-link" href="#"><img src="img/funds.svg" alt="Funds" title="Funds"></a>
             </div>
