--- a/resources/players.html
+++ b/resources/players.html
@@ -5,8 +5,8 @@
     <!-- build:include include/head.html --><!-- /build -->
 
     <script id="playerTemplate" type="x-tmpl-mustache">
-        <div class="col" id="{{ situationKey }}">
-            <div class="card card-clickable border-info mb-3" style="max-width: 20rem;" onclick="CivBuddy.buttonClick(this, 'Players', 'select', '{{ situationKey }}')">
+        <div class="col-xl-4 col-lg-5 col-md-6 col-sm-12" id="{{ situationKey }}">
+            <div class="card card-clickable border-info mb-3" onclick="CivBuddy.buttonClick(this, 'Players', 'select', '{{ situationKey }}')">
                 <div class="card-header"><span class="text-muted" data-l10n-id="players-cards-0"></span>
                     <button type="button" class="close" aria-label="Delete Player"
                         onclick="CivBuddy.buttonClick(this, 'Players', 'delete', '{{ situationKey }}', '{{ playerName }}', event)">
