Add first draft of fully fledged 'Cards' page navbar

--- a/resources/index.html
+++ b/resources/index.html
@@ -47,6 +47,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <p class="navbar-brand mb-0">CivBuddy</p>
+    <!-- TODO 'purge' command that clears local storage -->
     <ul class="navbar-nav ml-auto">
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarLangDropdownLabel" role="button"
