--- a/resources/cards.html
+++ b/resources/cards.html
@@ -45,17 +45,55 @@
 
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <div class="container">
-        <p class="navbar-brand mb-0">CivBuddy</p>
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarLangDropdownLabel" role="button" data-toggle="dropdown" aria-haspopup="true"
-                    aria-expanded="false">
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarLangDropdownLabel" id="otherLanguageFlags"></div>
-            </li>
-        </ul>
-        <!-- TODO player name, link to 'Players' page, num cards, score, zielpunktzahl-verfehlung (if needed), commit button -->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-1 col-lg-3">
+                <p class="navbar-brand mb-0"><a href="players.html"><!-- TODO add game id to link --><span class="oi oi-arrow-thick-left mr-4"
+                    aria-hidden="true" style="position: relative; top: 3px;"></span></a><span
+                    id="gameName" class="d-none d-lg-inline-block">2018-01-03 Regensburg</span></p> <!-- TODO overflow ellipsis for long names -->
+            </div>
+            <div class="col-3 col-lg-2">
+                <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
+                        <!-- TODO on sm and below, show current player name at top of dropdown -->
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarPlayerDropdownLabel" role="button" data-toggle="dropdown" aria-haspopup="true"
+                            aria-expanded="false"><span class="oi oi-person mr-2" aria-hidden="true"></span>Ramses</a>
+                        <div class="dropdown-menu" aria-labelledby="navbarPlayerDropdownLabel" id="playerDropdown">
+                            <a class="nav-link" href="#"><span class="oi oi-person mr-2" aria-hidden="true"></span>Ikarus</a>
+                            <a class="nav-link" href="#"><span class="oi oi-person mr-2" aria-hidden="true"></span>John Doe</a>
+                            <div class="dropdown-divider"></div><!-- TODO show divider only when at least one player above it -->
+                            <a class="nav-link" href="#"><span class="oi oi-people mr-2" aria-hidden="true"></span>Players</a><!-- TODO add game id to link -->
+                            <a class="nav-link" href="index.html"><span class="oi oi-account-logout mr-2" aria-hidden="true"></span>Games</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <!-- TODO on sm and below, show cards count and score vertically stacked -->
+            <div class="col-2">
+                <p class="navbar-brand mb-0"><img class="inline-svg mr-2" id="navbarCardsIcon" src="img/cards.svg" alt="">8/11</p>
+            </div>
+            <div class="col-3 col-lg-2">
+                <p class="navbar-brand mb-0"><span class="oi oi-target mr-2" aria-hidden="true"></span>245/1300</p>
+            </div>
+            <div class="col-1">
+                <p class="navbar-brand mb-0"><span class="oi oi-random mr-2" aria-hidden="true"></span><span
+                    class="d-none d-lg-inline-block" data-l10n-id="cards-navbar-revise"></span></p>
+            </div>
+            <!-- TODO filter button, possibly with 'eye' icon -->
+            <div class="col-1">
+                <p class="navbar-brand mb-0"><span class="oi oi-check mr-2" aria-hidden="true"></span><span
+                    class="d-none d-lg-inline-block" data-l10n-id="cards-navbar-buy"></span></p>
+            </div>
+            <div class="col-1">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarLangDropdownLabel" role="button" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false"></a>
+                        <div class="dropdown-menu" aria-labelledby="navbarLangDropdownLabel" id="otherLanguageFlags"></div>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
 </nav>
 
@@ -235,7 +273,7 @@
                 <p class="funds-info-text text-muted" data-l10n-id="cards-funds-remain" data-l10n-args='{"fundsCurrent": 30, "fundsAvailable": 120}'></p>
             </div>
             <div class="col-1 funds-icon">
-                <!-- TODO icon does not change color - maybe don't set color in icon? -->
+                <!-- TODO icon does not change color - convert to inline: https://stackoverflow.com/a/35126817/1005481 -->
                 <a class="nav-link" href="#"><img src="img/funds.svg" alt="Funds" title="Funds"></a>
             </div>
         </div>
