Make use of BootStrap's fixed-top navbar instead of custom css

--- a/resources/index.html
+++ b/resources/index.html
@@ -45,7 +45,7 @@
 <body>
 
 <!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
     <p class="navbar-brand mb-0">CivBuddy</p>
     <!-- TODO 'purge' command that clears local storage -->
     <ul class="navbar-nav ml-auto">
