--- a/resources/players.html
+++ b/resources/players.html
@@ -33,7 +33,7 @@
 <body>
 
 <!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
     <p class="navbar-brand mb-0"><a href="index.html"><span class="oi oi-arrow-thick-left mr-4"
         aria-hidden="true" style="position: relative; top: 3px;"></span></a><span id="gameName"></span></p>
     <ul class="navbar-nav ml-auto">
