--- a/resources/cards.html
+++ b/resources/cards.html
@@ -44,7 +44,7 @@
 <body>
 
 <!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
         <div class="row">
             <div class="col-1 col-lg-3">
