--- a/resources/cards.html
+++ b/resources/cards.html
@@ -48,7 +48,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-1 col-lg-3">
-                <p class="navbar-brand mb-0"><a href="players.html"><!-- TODO add game id to link --><span class="oi oi-arrow-thick-left mr-4"
+                <p class="navbar-brand mb-0"><a class="nav-action" href="players.html"><!-- TODO add game id to link --><span class="oi oi-arrow-thick-left mr-4"
                     aria-hidden="true" style="position: relative; top: 3px;"></span></a><span
                     id="gameName" class="d-none d-lg-inline-block">2018-01-03 Regensburg</span></p> <!-- TODO overflow ellipsis for long names -->
             </div>
@@ -56,8 +56,8 @@
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
                         <!-- TODO on sm and below, show current player name at top of dropdown -->
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarPlayerDropdownLabel" role="button" data-toggle="dropdown" aria-haspopup="true"
-                            aria-expanded="false"><span class="oi oi-person mr-2" aria-hidden="true"></span>Ramses</a>
+                        <a class="nav-link nav-action dropdown-toggle" href="#" id="navbarPlayerDropdownLabel" role="button" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false"><span class="oi oi-person mr-2" aria-hidden="true"></span>Ramses</a>
                         <div class="dropdown-menu" aria-labelledby="navbarPlayerDropdownLabel" id="playerDropdown">
                             <a class="nav-link" href="#"><span class="oi oi-person mr-2" aria-hidden="true"></span>Ikarus</a>
                             <a class="nav-link" href="#"><span class="oi oi-person mr-2" aria-hidden="true"></span>John Doe</a>
@@ -69,20 +69,23 @@
                 </ul>
             </div>
             <!-- TODO on sm and below, show cards count and score vertically stacked -->
-            <div class="col-2">
+            <div class="col-2 col-lg-1">
                 <p class="navbar-brand mb-0"><img class="inline-svg mr-2" id="navbarCardsIcon" src="img/cards.svg" alt="">8/11</p>
             </div>
-            <div class="col-3 col-lg-2">
+            <div class="col-2 col-lg-2">
                 <p class="navbar-brand mb-0"><span class="oi oi-target mr-2" aria-hidden="true"></span>245/1300</p>
             </div>
             <div class="col-1">
-                <p class="navbar-brand mb-0"><span class="oi oi-random mr-2" aria-hidden="true"></span><span
-                    class="d-none d-lg-inline-block" data-l10n-id="cards-navbar-revise"></span></p>
+                <p class="navbar-brand nav-action mb-0"><a href="#"><span class="oi oi-random mr-2" aria-hidden="true"></span><span
+                    class="d-none d-lg-inline-block" data-l10n-id="cards-navbar-revise"></span></a></p>
             </div>
-            <!-- TODO filter button, possibly with 'eye' icon -->
             <div class="col-1">
-                <p class="navbar-brand mb-0"><span class="oi oi-check mr-2" aria-hidden="true"></span><span
-                    class="d-none d-lg-inline-block" data-l10n-id="cards-navbar-buy"></span></p>
+                <p class="navbar-brand nav-action mb-0"><a href="#"><span class="oi oi-eye mr-2" aria-hidden="true"></span><span
+                    class="d-none d-lg-inline-block" data-l10n-id="cards-navbar-filter"></span></a></p>
+            </div>
+            <div class="col-1">
+                <p class="navbar-brand nav-action mb-0"><a href="#"><span class="oi oi-check mr-2" aria-hidden="true"></span><span
+                    class="d-none d-lg-inline-block" data-l10n-id="cards-navbar-buy"></span></a></p>
             </div>
             <div class="col-1">
                 <ul class="navbar-nav ml-auto">
